--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,11 +18,6 @@
     - nuget setapikey %apiKey% -Verbosity quiet
   build_script:
   - build.bat NuPlug\NuPlug.csproj /t:Test;Deploy /v:m
-#  after_build:
-#  - ps: >-
-#      $wc = New-Object 'System.Net.WebClient'
-#    
-#      $wc.UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\testresults\NuPlug.Tests.xml))
 
 # all other branches
 -
@@ -33,13 +28,12 @@
     patch: false
   nuget:
     disable_publish_on_pr: true
+  environment:
+    apiKey:
+      secure: nOI+DF6dG2DnZOaNxLKvfpP5RW8Mc6peyzCcnIIFndE=
+    NuGetSourceToDeploy: https://ci.appveyor.com/nuget/awesome-inc-build-y5l243ydeuam/api/v2/package
   before_build:
     - ps: gitversion /l console /output buildserver
+    - nuget setapikey %apiKey% -Source %NuGetSourceToDeploy% -Verbosity quiet
   build_script:
-    - build.bat NuPlug\NuPlug.csproj /t:Test;Package /v:m
-  after_build:
-    - appveyor PushArtifact NuPlug\NuPlug.%APPVEYOR_BUILD_VERSION%.nupkg
- # - ps: >-
- #     $wc = New-Object 'System.Net.WebClient'
- #   
- #     $wc.UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\testresults\NuPlug.Tests.xml))
+    - build.bat NuPlug\NuPlug.csproj /t:Test;Deploy /v:m
