--- a/NuPlug/packages.config
+++ b/NuPlug/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="coveralls.io" version="1.3.4" targetFramework="net45" />
   <package id="FluentAssertions" version="4.1.1" targetFramework="net45" />
   <package id="GitVersionTask" version="3.3.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
@@ -9,7 +10,7 @@
   <package id="NUnit" version="3.0.1" targetFramework="net45" />
   <package id="NUnit.Console" version="3.0.1" targetFramework="net45" />
   <package id="NUnit.Runners" version="3.0.1" targetFramework="net45" />
-  <package id="OneClickBuild" version="1.7.2" targetFramework="net45" />
+  <package id="OneClickBuild" version="1.8.0" targetFramework="net45" developmentDependency="true" />
   <package id="OpenCover" version="4.6.166" targetFramework="net45" />
-  <package id="ReportGenerator" version="2.3.4.0" targetFramework="net45" />
+  <package id="ReportGenerator" version="2.3.5.0" targetFramework="net45" />
 </packages>
