--- a/Samples/RestPlugin/packages.config
+++ b/Samples/RestPlugin/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" />
+  <package id="coveralls.io" version="1.3.4" targetFramework="net452" />
   <package id="GitVersionTask" version="3.3.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
@@ -18,9 +19,9 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NUnit.Console" version="3.0.1" targetFramework="net452" />
   <package id="NUnit.Runners" version="3.0.1" targetFramework="net452" />
-  <package id="OneClickBuild" version="1.7.2" targetFramework="net452" />
+  <package id="OneClickBuild" version="1.8.0" targetFramework="net452" developmentDependency="true" />
   <package id="OpenCover" version="4.6.166" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="ReportGenerator" version="2.3.4.0" targetFramework="net452" />
+  <package id="ReportGenerator" version="2.3.5.0" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.2.2" targetFramework="net452" />
 </packages>
