--- a/NuPlug/NuPlug.csproj
+++ b/NuPlug/NuPlug.csproj
@@ -91,6 +91,7 @@
     <Compile Include="PackageManagerExtensions_Should.cs" />
     <Compile Include="PackageRepositories.cs" />
     <Compile Include="PackageRepositories_Should.cs" />
+    <Compile Include="Profiler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SafeAssemblyCatalog.cs" />
     <Compile Include="SafeAssemblyCatalog_Should.cs" />
