--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,8 @@
   branches:
     only:
       - master
+      - /hotfix/
+      - /release/
   install:
     - choco install gitversion.portable -pre -y
   test: off
@@ -18,6 +20,10 @@
     - nuget setapikey %apiKey% -Verbosity quiet
   build_script:
   - build.bat NuPlug\NuPlug.csproj /t:CoverageUpload;Deploy /v:m
+  cache:
+    - packages -> **\packages.config
+    - C:\ProgramData\chocolatey\bin -> appveyor.yml
+    - C:\ProgramData\chocolatey\lib -> appveyor.yml
 
 # all other branches
 -
@@ -32,3 +38,7 @@
     - gitversion /l console /output buildserver
   build_script:
     - build.bat NuPlug\NuPlug.csproj /t:CoverageUpload;Package /v:m
+  cache:
+    - packages -> **\packages.config
+    - C:\ProgramData\chocolatey\bin -> appveyor.yml
+    - C:\ProgramData\chocolatey\lib -> appveyor.yml
